# enchantron

./: .gitignore  README.md
enchantron-core/: Cargo.toml  build.rs  cbindgen.toml  enchantron.h  enchantron_gen.h
enchantron-core/src/: application_context.rs  enchantron.h  event.rs  game.rs  img.rs  lib.rs  lib_apple.rs  lib_swift.rs  model.rs  native.rs  presenter.rs  swift_application_context.rs  ui.rs  util.rs  view.rs  view_types.rs
enchantron-core/src/enchantron/: main_menu_presenter.rs  mod.rs
enchantron-core/src/event/: define_event_bus.rs  event_bus.rs  event_key.rs  event_listener.rs  events.rs  has_listener_registrations.rs  listener_registration.rs  old_event_bus.rs  old_events.rs  post_on_drop.rs
enchantron-core/src/game/: character_system.rs  constants.rs  direction.rs  ecs_interop.rs  entity.rs  entity_data.rs  entity_message.rs  entity_run_bundle.rs  entity_service.rs  entity_slot_key.rs  entity_type.rs  game_entity.rs  game_entity_slot_key.rs  game_runner.rs  gor.rs  location.rs  location_response.rs  location_service.rs  message_service.rs  perlin_terrain_1.rs  player.rs  presenter_service.rs  saved_game.rs  services.rs  simplex_terrain_1.rs  sprite_service.rs  terrain_provider.rs  terrain_type.rs  time.rs  time_source.rs  view_service.rs  world_entity.rs  world_service.rs
enchantron-core/src/img/: png_generator.rs
enchantron-core/src/model/: card.rs  card_find_response.rs  dragged_card_display_state.rs  game_display_state.rs  game_setup.rs  game_state.rs  i_point.rs  i_rect.rs  i_size.rs  mod.rs  point.rs  rect.rs  size.rs  u_point.rs  u_rect.rs
enchantron-core/src/native/: animation.rs  animations.rs  has_int_size.rs  mod.rs  resource_loader.rs  runtime_resources.rs  shader.rs  shader_variable_type.rs  shaders.rs  system_interop.rs  system_view.rs  texture.rs  texture_loader.rs  textures.rs
enchantron-core/src/native_apple/: mod.rs  texture_loader.rs
enchantron-core/src/presenter/: entity_presenter.rs  focused_entity_presenter.rs  game_presenter.rs  loading_presenter.rs  main_menu_presenter.rs  mod.rs  new_terrain_presenter.rs  player_presenter.rs  terrain_presenter.rs  viewport_presenter.rs
enchantron-core/src/ui/: RawTouchPoint.rs  button.rs  click_handler.rs  color.rs  drag_event_type.rs  drag_handler.rs  drag_point.rs  drag_state.rs  drag_tracker.rs  finger.rs  game_display_state.rs  game_view.rs  handler_registration.rs  has_click_handlers.rs  has_drag_handlers.rs  has_int_value.rs  has_layout_handlers.rs  has_location.rs  has_magnify_handlers.rs  has_multi_drag_handlers.rs  has_multi_touch_handlers.rs  has_mutable_color.rs  has_mutable_float_value.rs  has_mutable_location.rs  has_mutable_scale.rs  has_mutable_size.rs  has_mutable_visibility.rs  has_mutable_z_level.rs  has_size.rs  has_sprites.rs  has_text.rs  has_viewport.rs  layout_handler.rs  loading_view.rs  magnify_handler.rs  main_menu_view.rs  mod.rs  multi_drag_handler.rs  multi_touch_handler.rs  pan_zoom_tracker.rs  (+30 more)
enchantron-core/src/ui_apple/: button.rs  click_handler.rs  game_view.rs  handler_registration.rs  loading_view.rs  main_menu_view.rs  mod.rs  progress_bar.rs  rust_string.rs  swift_string.rs  texture.rs
enchantron-core/src/util/: boxed_any.rs  byte_buffer.rs  concurrent_slotmap.rs  corner_values.rs  default_xxhash_ipoint_hasher.rs  dyn_action_sink.rs  harmonic_perlin_generator.rs  (+16 more)
(+93 files in other folders)
