[package]
name = "enchantron-core"
version = "0.1.0"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
edition = "2018"
#build = "build/build.rs"


[dependencies]
trace-error = "0.1.5"
lazy_static = "1.4.0"
log = "0.4"
simplelog = "0.7.4"
itertools = "0.8.2"
getset = "0.1.0"
derive_builder = "0.9.0"
atomic-counter = "1.0.1"
twox-hash = "1.5.0"
anymap = "0.12.1"
tokio = { version = "0.2.13", features = [ "time", "sync", "rt-threaded", "rt-core", "stream" ] }
futures = "0.3.4"
png = "0.16.1"
rand = "0.7.3"
derive-new = "0.5.8"

[build-dependencies]
cbindgen = "0.13.1"
regex = "1.3.4"
lazy_static = "1.4.0"
handlebars = "1.1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.47"
heck = "0.3.1"
derive_builder = "0.9.0"
itertools = "0.8.2"
log = "0.4"
simplelog = "0.7.4"

[dev-dependencies]
mockall = "0.6.0"

[lib]
name = "enchantron"
path = "src/lib.rs"
crate-type = ["staticlib"]

