# spell-checker: disable

[package]
name = "enchantron-core"
version = "0.1.0"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
edition = "2018"
build = "build/build.rs"


[dependencies]
trace-error = "0.1.5"
lazy_static = "1.4.0"
log = "0.4"
simplelog = "0.8.0"
itertools = "0.9.0"
getset = "0.1.1"
derive_builder = "0.9.0"
atomic-counter = "1.0.1"
twox-hash = "1.5.0"
tokio = { git = "https://github.com/RookAndPawn/pausable-tokio.git" , features = [ "time", "sync", "rt-threaded", "rt-core", "stream", "macros", "blocking" ] }
async-stream = "0.3.0"
futures = "0.3.5"
png = "0.16.2"
rand = "0.7.3"
derive-new = "0.5.8"
rstar = "0.8.0"
pdqselect = "0.1"
array-macro = "1.0.5"
static_assertions = "1.1.0"
ev_slotmap = "0.2.0"
one_way_slot_map = "0.3.1"
num_cpus = "1.13.0"
evmap = "10.0.2"
owning_ref = "0.4.1"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }

[build-dependencies]
cbindgen = "0.13.1"
regex = "1.3.4"
lazy_static = "1.4.0"
handlebars = "1.1.0"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.47"
heck = "0.3.1"
derive_builder = "0.9.0"
itertools = "0.8.2"
log = "0.4"
simplelog = "0.7.4"

[dev-dependencies]
mockall = "0.6.0"

[lib]
name = "enchantron"
path = "src/lib.rs"
crate-type = ["staticlib"]
